--- a/influencer.html
+++ b/influencer.html
@@ -32,21 +32,23 @@
             </div>
         </section>
         <!-- Hero Section -->
-        <section class="hero-section">
-            <div class="hero-content">
-                <h1>Start your Journey as Influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio vitae
-                    sequi quo qui iure iusto
-                    deleniti ea.</p>
-                <a href="" class="button">Prebook now <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="hero-img">
-                <img src="images/main-camera.png" alt="">
+        <section>
+            <div class="hero-section">
+                <div class="hero-content">
+                    <h1>Start your Journey as Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio vitae
+                        sequi quo qui iure iusto
+                        deleniti ea.</p>
+                    <a href="" class="button">Prebook now <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="hero-img">
+                    <img src="images/main-camera.png" alt="">
+                </div>
             </div>
         </section>
     </header>
     <main>
-
+        <!-- Logos Section Start -->
         <section class="container">
             <div class="logos">
                 <div><img src="logos/Alibaba.svg" alt=""></div>
@@ -57,6 +59,10 @@
                 <div><img src="logos/Walmart.svg" alt=""></div>
             </div>
         </section>
+        <!-- Logos Section End -->
+
+
+
 
         <!-- Popular Collection Start -->
         <section class="container">
@@ -288,7 +294,35 @@
                     </div>
                 </div>
             </div>
+            <a href="" class="redirector-text">See more <i class="fas fa-arrow-right"></i></a>
         </section>
+        <!-- Popular Collection End -->
+
+
+        <!-- Find Influencers Start -->
+
+
+        <section class="container">
+            <div class="find-influencers">
+                <h1>Find <span class="special-text">real</span> influencers in seconds</h1>
+                <p>Search 11 million Instagram and YouTube Influencers <br>Audience demographics and authenticity
+                    analysis.
+                </p>
+
+                <div class="request-demo">
+                    <input type="text" name="" id="" placeholder="Write your name" required>
+                    <a href="" class="request-button">Request a demo</a>
+                </div>
+                <div class="create-account">
+                    <input type="text" name="" id="" placeholder="Email Address">
+                    <a href="" class="create-button">Create Account</a>
+                </div>
+            </div>
+        </section>
+
+
+
+
     </main>
     <footer>
         <div class="footer-content">
@@ -306,6 +340,16 @@
         </div>
 
     </footer>
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
